--- a/IssueTracker/Views/Issue/Create.cshtml
+++ b/IssueTracker/Views/Issue/Create.cshtml
@@ -1,8 +1,6 @@
 @model IssueTracker.Models.Issue
 
-@{
-    ViewData["Title"] = "Create";
-}
+@{ ViewData["Title"] = "Create"; }
 
 <h1>Create</h1>
 
@@ -32,11 +30,7 @@
                 <input asp-for="Status" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Project" class="control-label"></label>
                 <input asp-for="Project" class="form-control" />
