--- a/IssueTracker/Views/Shared/_Layout.cshtml
+++ b/IssueTracker/Views/Shared/_Layout.cshtml
@@ -74,6 +74,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
+
+                    <span>Users</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">
 
                     <span>Privacy</span>
