all tables required are added

--- a/IssueTracker/Views/Shared/_Layout.cshtml
+++ b/IssueTracker/Views/Shared/_Layout.cshtml
@@ -80,6 +80,24 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Project" asp-action="Index">
+
+                    <span>Projects</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Comment" asp-action="Index">
+
+                    <span>Comments</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Assignment" asp-action="Index">
+
+                    <span>Assignment</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">
 
                     <span>Privacy</span>
